Changelog
=========

2.1.3 (unreleased)
------------------

- Updated classifiers list for package
  [macagua]

- Updated Spanish translation
  [macagua]

- Use getMultiAdapter instead of restrictedTraverse in Views
  [gborelli]


2.1.2 (2014-03-16)
------------------

- Add content type location's attribute as default value
  for geocoding input field
  [gborelli]

- Fix #14 - GeoCoderView
  [gborelli]


2.1.1 (2014-02-26)
------------------

- Fix geopy version; geopy 0.98.1 is currently broken
  [gborelli]


2.1 (2014-02-26)
----------------

- Moved collective_geo_styles metadata and related indexer
  from c.geo.contentlocations
  [gborelli]

- Added get_feature_styles method to retrieve map styles
  [gborelli]

- Fixed google.GQueryError ImportError
  [Jian Aijun]

- Updated German translation.
  [href]


2.0 (2013-10-29)
----------------

- Change package layout
  [gborelli]

- Re-adds previously used maxResolution and maxExtent options, fixing issues
  with certain WMTS services. [href]


2.0b1 (2013-06-02)
------------------

- move IGeoCoder utility from c.geo.mapwidget
  [gborelli]

- Prevent multiple inclusions of Google maps and Bing javascripts
  [gborelli]

- Moved Openlayers localization to geosettings_view
  [gborelli]

- Added ShapeDisplayLayer
  [gborelli]

- Documented javascript files with http://abstract-open-solutions.github.io/code-illuminated/
  [gborelli]

- Refactored collectivegeo javascript
  [gborelli]

- Moved static resource to static directory
  [gborelli]

- Removed all Yahoo maps references. See: collective.geo.bundle #19
  [gborelli]

- Removed YahooStreetMapLayer, YahooSatelliteMapLayer, YahooHybridMapLayer
  and relative templates
  [gborelli]

- Removed yahoomaps, yahooapi, yahoo_maps_js from collective geo macros
  [gborelli]

- Added c.z3cform.colorpicker profile in metadata.xml. Now we depend on
  c.z3cform.colorpicker > 0.2
  [gborelli]

- Added ShapeMapWidget and ShapeEditLayer and theirs respective adapters
  [gborelli]

